# adxl345-rs

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
src/data_bus/: i2c.rs  mod.rs  spi.rs
src/register/: field.rs  mod.rs
target-tests/: Cargo.toml
target-tests/.cargo/: config.toml
target-tests/tests/: adxl345-hal.rs
tests/: i2c.rs  spi.rs
