[package]
name = "target-tests"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "adxl345-hal"
harness = false

[dev-dependencies]
cortex-m = "0.7.5"
defmt = "0.3.2"
defmt-rtt = "0.3.2"
defmt-test = "0.3.0"
rp-pico = "0.4.1"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
nb = "1.0.0"
adxl345-hal = { path = ".." }

[profile.dev]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 's'

[profile.test]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 's'
